--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gulp-live-server": "0.0.29",
     "gulp-watch": "^4.3.5",
     "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "sequelize": "^3.14.2"
   }
 }
