--- a/package.json
+++ b/package.json
@@ -12,12 +12,19 @@
   "dependencies": {
     "angular": "^1.4.8",
     "angular-route": "^1.4.8",
+    "body-parser": "^1.14.2",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.0",
     "express": "^4.13.3",
+    "express-session": "^1.12.1",
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
     "gulp-live-server": "0.0.29",
     "gulp-watch": "^4.3.5",
+    "method-override": "^2.3.5",
+    "morgan": "^1.6.1",
     "passport": "^0.3.2",
+    "passport-facebook": "^2.0.0",
     "passport-local": "^1.0.0",
     "sequelize": "^3.14.2"
   }
